--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
       </form>
     </div>
 
+    <div class="card">
+      <h3 class="card-header text-uppercase">Search By Topic</h3>
+      <div class="card-body" id="language-buttons">
+        <button class="btn" data-language="html">HTML</button>
+        <button class="btn" data-language="css">CSS</button>
+        <button class="btn" data-language="javascript">Javascript</button>
+      </div>
+    </div>
   </main>
 
   <script defer src="./assets/js/homepage.js"></script>
